<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="horizontal"
    android:background="@color/paneraWhite">


    <RelativeLayout
        android:id="@+id/rlLoginActivityTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">
        <Button
            android:id="@+id/btnBackToWelcomeActivity"
            style="@style/btn_back_style"/>
        <TextView
            android:id="@+id/tvJoinMyClub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_myclub"
            android:textColor="@color/myBlack"
            android:fontFamily="@font/open_sans_regular"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llLoginActivityLoginCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/tvWelcomeToFoodClub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_food_club_"
            android:fontFamily="@font/open_sans_regular"
            android:textSize="36sp"
            android:textColor="@color/myBlack"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="64dp"/>
        <Button
            android:id="@+id/btnSignInToMyClub"
            android:layout_width="640dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in_to_myClub"
            style="@style/btn_round_sides_green"
            android:background="@drawable/round_sides_green_button"
            android:textColor="@color/paneraWhite"
            android:layout_marginBottom="32dp"/>
        <Button
            android:id="@+id/btnContinueAsGuest"
            android:layout_width="640dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/continue_as_guest"
            style="@style/btn_round_sides_white"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rlLoginActivityBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp">
        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="@color/myBlack"
            android:fontFamily="@font/open_sans_regular"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:clickable="true"
            android:focusable="true">
        </TextView>
        <TextView
            android:id="@+id/tvTermsOfUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use"
            android:textColor="@color/myBlack"
            android:fontFamily="@font/open_sans_regular"
            android:layout_toEndOf="@id/tvPrivacy"
            android:layout_marginEnd="32dp"
            android:clickable="true"
            android:focusable="true">

        </TextView>
        <TextView
            android:id="@+id/tvAllergenNutritionalInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergen_and_nutrition_information"
            android:textColor="@color/myBlack"
            android:fontFamily="@font/open_sans_regular"
            android:layout_toEndOf="@id/tvTermsOfUse"
            android:layout_marginEnd="32dp"
            android:clickable="true"
            android:focusable="true">

        </TextView>
    </RelativeLayout>

</RelativeLayout>