<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paneraWhite"
    android:orientation="horizontal"
    tools:context=".ThankYouActivity">

    <TextView
        android:id="@+id/tvThankYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvTakeASeat"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:text="@string/thank_you_were_preparing_your_order_now"
        android:textColor="@color/myBlack"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tvTakeASeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/llOrderInfo"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:text="@string/take_a_seat_and_we_ll_get_to_you_when_your_food_is_ready"
        android:textColor="@color/myBlack"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/llOrderInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvOrderNumber"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/tvTotalItemsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center"
            android:text="2 items"
            android:textColor="@color/myBlack"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_point_24dp" />

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center"
            android:text="$7.89"
            android:textColor="@color/myBlack"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_point_24dp" />

        <TextView
            android:id="@+id/tvDineInValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center"
            android:text="Dine In"
            android:textColor="@color/myBlack"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvOrderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnJoinMyClub"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:fontFamily="@font/open_sans_light"
        android:gravity="center"
        android:text="Order #28"
        android:textColor="@color/myBlack"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnJoinMyClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:background="@drawable/ripple_round_green_btn"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:paddingLeft="64dp"
        android:paddingTop="20dp"
        android:paddingRight="64dp"
        android:paddingBottom="20dp"
        android:text="@string/join_myclub_bold"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/paneraWhite"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvImFinished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnJoinMyClub"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/thanks_i_m_finished"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/myBlack"
        android:textSize="14sp" />

</RelativeLayout>