<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/board_bread"
    android:orientation="vertical"
    tools:context=".ItemActivity">

    <Button
        android:id="@+id/btnBackToMenuActivity"
        style="@style/btn_back_style"
        android:layout_margin="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llItemItemActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBackToMenuActivity"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="80dp">

            <TextView
                android:id="@+id/tvItemNameItemActivity"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semi_bold"
                android:maxLines="3"
                android:singleLine="false"
                android:text="Bacon, Egg &amp; Cheese on Brioche"
                android:textColor="@color/myBlack"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tvItemCcalItemActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="450 ccal"
                android:textColor="@color/myBlack"
                android:textSize="18dp" />

            <LinearLayout
                android:id="@+id/rlQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/paneraWhite"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btnQuantityItemActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/quantity"
                    android:textColor="@color/myBlack"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spQuantityItemActivity"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/open_sans_regular"
                    android:textColor="@color/myBlack"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:spinnerMode="dropdown">

                </Spinner>
            </LinearLayout>

            <Button
                android:id="@+id/btnCustomizeItemActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/paneraWhite"
                android:stateListAnimator="@null"
                android:fontFamily="@font/open_sans_regular"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/customize"
                android:textAllCaps="false"
                android:textColor="@color/myBlack"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvNutritionalInfoItemActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/nutritional_info"
                android:textColor="@color/myBlack"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivItemImageItemActivity"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:src="@drawable/breakfast_1" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rlAddToOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_round_green_btn"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="40dp"
            android:paddingLeft="72dp"
            android:paddingTop="18dp"
            android:paddingRight="72dp"
            android:paddingBottom="18dp">
            <TextView
                android:id="@+id/tvAddToOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/add_to_order"
                android:textSize="18dp"
                android:textColor="@color/paneraWhite"
                android:fontFamily="@font/open_sans_semi_bold"/>
            <TextView
                android:id="@+id/tvItemPriceItemActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="$4.99"
                android:textColor="@color/paneraWhite"
                android:textSize="18dp"
                android:fontFamily="@font/open_sans_regular"
                android:layout_toRightOf="@id/tvAddToOrder"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@id/rlBtnShoppingCart"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ripple_cart_button">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivShoppingBagFromItemActivity"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/shopping_bag"
                    android:tint="@color/paneraWhite" />

                <TextView
                    android:id="@id/tvCartSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/paneraWhite"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
